test(java): keep registry tests on JDK 8